@@ -139,7 +139,7 @@ public:
     }
   }
 
-  void app_end_cb(int c)   { finished = true; }
+  int app_end_cb(int c)   { finished = true; return 1; }
 
   int atomic_cb(int c) {
     tracefile << std::dec << c << ": Atomic\n";
